Fix issues with Hidden Items / Itemfinder logic as well as Mon Locked Checks logic

--- a/Map Data/BurnedTower.yml
+++ b/Map Data/BurnedTower.yml
@@ -49,7 +49,7 @@ Location:
                 WildTableList: 
                 LocationReqs: Burned Tower 1F
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs: 
                 FlagsSet:
                 ReachableReqs:
@@ -71,7 +71,7 @@ Location:
                 WildTableList: 
                 LocationReqs: Burned Tower 1F
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs: 
                 FlagsSet:
                 ReachableReqs:
