--- a/Map Data/GoldenrodCity.yml
+++ b/Map Data/GoldenrodCity.yml
@@ -485,7 +485,7 @@ Location:
             WildTableList:
             LocationReqs: Goldenrod Underground
             FlagReqs:
-                - Hidden Items
+                - Hidden Items Available
             ItemReqs:
             FlagsSet:
             ReachableReqs:
@@ -506,7 +506,7 @@ Location:
             WildTableList:
             LocationReqs: Goldenrod Underground
             FlagReqs:
-                - Hidden Items
+                - Hidden Items Available
             ItemReqs:
             FlagsSet:
             ReachableReqs:
@@ -528,7 +528,7 @@ Location:
             WildTableList:
             LocationReqs: Goldenrod Underground
             FlagReqs:
-                - Hidden Items
+                - Hidden Items Available
             ItemReqs:
             FlagsSet:
             ReachableReqs:
