--- a/Map Data/GoldenrodTunnel.yml
+++ b/Map Data/GoldenrodTunnel.yml
@@ -135,7 +135,7 @@ Location:
                 WildTableList:
                 LocationReqs: Goldenrod Tunnel
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
@@ -156,7 +156,7 @@ Location:
                 WildTableList:
                 LocationReqs: Goldenrod Tunnel
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
