--- a/Map Data/Route28.yml
+++ b/Map Data/Route28.yml
@@ -97,7 +97,7 @@ Location:
         LocationReqs:
             - Route 28 Cut Access
         FlagReqs:
-            - Hidden Items
+            - Hidden Items Available
         ItemReqs:
         FlagsSet:
         ReachableReqs:
