--- a/Map Data/Route37.yml
+++ b/Map Data/Route37.yml
@@ -92,7 +92,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 37
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
