--- a/Map Data/Route9.yml
+++ b/Map Data/Route9.yml
@@ -104,7 +104,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 9
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
