--- a/Map Data/TinTower.yml
+++ b/Map Data/TinTower.yml
@@ -342,7 +342,7 @@ Location:
                         WildTableList:
                         LocationReqs: Tin Tower 4F
                         FlagReqs:
-                            - Hidden Items
+                            - Hidden Items Available
                         ItemReqs:
                         FlagsSet:
                         ReachableReqs:
@@ -400,7 +400,7 @@ Location:
                         WildTableList:
                         LocationReqs: Tin Tower 5F
                         FlagReqs:
-                            - Hidden Items
+                            - Hidden Items Available
                         ItemReqs:
                         FlagsSet:
                         ReachableReqs:
@@ -424,7 +424,7 @@ Location:
                         WildTableList:
                         LocationReqs: Tin Tower 5F
                         FlagReqs:
-                            - Hidden Items
+                            - Hidden Items Available
                         ItemReqs:
                         FlagsSet:
                         ReachableReqs:
