--- a/Map Data/AzaleaCity.yml
+++ b/Map Data/AzaleaCity.yml
@@ -61,7 +61,7 @@ Location:
                 WildTableList:
                 LocationReqs: Azalea Town
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
