--- a/Map Data/CeruleanCoast.yml
+++ b/Map Data/CeruleanCoast.yml
@@ -27,7 +27,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 25
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
