--- a/Map Data/CianwoodCity.yml
+++ b/Map Data/CianwoodCity.yml
@@ -131,7 +131,7 @@ Location:
                 WildTableList:
                 LocationReqs: Cianwood City
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                     - Rock Smash Usable
                 ItemReqs:
                 FlagsSet:
@@ -153,7 +153,7 @@ Location:
                 WildTableList:
                 LocationReqs: Cianwood City
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                     - Rock Smash Usable
                 ItemReqs:
                 FlagsSet:
