--- a/Map Data/CinnabarIsland.yml
+++ b/Map Data/CinnabarIsland.yml
@@ -82,7 +82,7 @@ Location:
                 WildTableList:
                 LocationReqs: Cinnabar Island
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
