--- a/Map Data/KantoCoastRoutes.yml
+++ b/Map Data/KantoCoastRoutes.yml
@@ -68,7 +68,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 13 and 14
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
