--- a/Map Data/MtSilver.yml
+++ b/Map Data/MtSilver.yml
@@ -26,7 +26,7 @@ Location:
             LocationReqs:
                 - Mt. Silver Outside
             FlagReqs:
-                - Hidden Items
+                - Hidden Items Available
                 - Fog Badge
             ItemReqs:
                 - Surf
@@ -214,7 +214,7 @@ Location:
                 WildTableList:
                 LocationReqs: Mt. Silver Room 1
                 FlagReqs:
-                  - Hidden Items
+                  - Hidden Items Available
                   - Zephyr Badge
                 ItemReqs:
                   - Flash
@@ -238,7 +238,7 @@ Location:
                 WildTableList:
                 LocationReqs: Mt. Silver Room 1
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                     - Zephyr Badge
                 ItemReqs:
                     - Flash
@@ -300,7 +300,7 @@ Location:
                     WildTableList:
                     LocationReqs: Mt. Silver Room 2
                     FlagReqs:
-                        - Hidden Items
+                        - Hidden Items Available
                     ItemReqs:
                     FlagsSet:
                     ReachableReqs:
