--- a/Map Data/NationalPark.yml
+++ b/Map Data/NationalPark.yml
@@ -208,7 +208,7 @@ Location:
                 WildTableList:
                 LocationReqs: National Park
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
@@ -231,7 +231,7 @@ Location:
                 WildTableList:
                 LocationReqs: National Park
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
