--- a/Map Data/Route11.yml
+++ b/Map Data/Route11.yml
@@ -81,7 +81,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 11 Entrance
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
