--- a/Map Data/Route39.yml
+++ b/Map Data/Route39.yml
@@ -117,7 +117,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 39
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
