--- a/Map Data/Route4.yml
+++ b/Map Data/Route4.yml
@@ -51,7 +51,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 4
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
