--- a/Map Data/Route44.yml
+++ b/Map Data/Route44.yml
@@ -126,7 +126,7 @@ Location:
                 WildTableList:
                 LocationReqs: Route 44
                 FlagReqs:
-                    - Hidden Items
+                    - Hidden Items Available
                     - Fog Badge
                 ItemReqs:
                     - Surf
