--- a/Map Data/VictoryRoad.yml
+++ b/Map Data/VictoryRoad.yml
@@ -122,7 +122,7 @@ Location:
                 WildTableList:
                 LocationReqs: Victory Road F1
                 FlagReqs:
-                  - Hidden Items
+                  - Hidden Items Available
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
@@ -239,7 +239,7 @@ Location:
                     WildTableList:
                     LocationReqs: Victory Road F3
                     FlagReqs:
-                        - Hidden Items
+                        - Hidden Items Available
                     ItemReqs:
                     FlagsSet:
                     ReachableReqs:
