Add generated path for items into the spoiler. Change processing to only add after making progress, maps first. Fix issue which would cause items to be skipped due to removing from a list whilst in for loop. Fix issues with trash list handling based on sublocations. Rework Phone Call Trainers and Mon Locked Checks flags to be set seperately to avoid duplicate naming issues. Fix potential issues with Purchasable item logic for Shopsanity. Fix logical fallicies for Alan Fire Stone & Viridian Mart. Fix logic when using all items 5F Shopsanity modifier. Add handling for beating Clair unlocking Maghoney Mart (warps). Add Flash requirement for Most Map Access.

--- a/Map Data/FieldMoves.yml
+++ b/Map Data/FieldMoves.yml
@@ -28,6 +28,7 @@ Location:
             - Rock Smash
         FlagReqs:
           - Shopsanity
+          - Rock Smash Purchasable
         FlagsSet:
         ReachableReqs:
         Code:
