--- a/Map Data/Route27.yml
+++ b/Map Data/Route27.yml
@@ -193,7 +193,7 @@ Location:
                 FlagReqs:
                     - Fog Badge
                     - Glacier Badge
-                    - Phone Call Trainers
+                    - Callable Trainers
                 ItemReqs:
                     - Surf
                     - Whirlpool
