--- a/Map Data/Route34.yml
+++ b/Map Data/Route34.yml
@@ -181,7 +181,7 @@ Location:
                 LocationReqs: 
                     - Route 34
                 FlagReqs:
-                    - Phone Call Trainers
+                    - Callable Trainers
                     - Beat Team Rocket
                 ItemReqs:
                 FlagsSet:
@@ -208,7 +208,7 @@ Location:
                 LocationReqs:
                     - Route 34
                 FlagReqs:
-                    - Phone Call Trainers
+                    - Callable Trainers
                 ItemReqs:
                 FlagsSet:
                     - Possible Sale
