--- a/Map Data/Route38.yml
+++ b/Map Data/Route38.yml
@@ -139,7 +139,7 @@ Location:
             WildTableList:
             LocationReqs: Route 38 Entrance
             FlagReqs:
-                - Phone Call Trainers
+                - Callable Trainers
             ItemReqs:
             FlagsSet:
             ReachableReqs:
