--- a/Map Data/Route42.yml
+++ b/Map Data/Route42.yml
@@ -323,7 +323,7 @@ Location:
                 WildTableList: 
                 LocationReqs: Route 42 East
                 FlagReqs:
-                    - Phone Call Trainers
+                    - Callable Trainers
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
