--- a/Map Data/Route43.yml
+++ b/Map Data/Route43.yml
@@ -104,7 +104,7 @@ Location:
         LocationReqs: 
             - Route 43
         FlagReqs:
-            - Phone Call Trainers
+            - Callable Trainers
             - Mons Available
         ItemReqs:
         FlagsSet:
