--- a/Map Data/Route44.yml
+++ b/Map Data/Route44.yml
@@ -170,7 +170,7 @@ Location:
                 LocationReqs: 
                     - Route 44
                 FlagReqs:
-                    - Phone Call Trainers
+                    - Callable Trainers
                     - Kanto Power Restored
                     - Became Champion
                 ItemReqs:
@@ -216,7 +216,7 @@ Location:
                 LocationReqs: 
                     - Route 44
                 FlagReqs:
-                    - Phone Call Trainers
+                    - Callable Trainers
                 ItemReqs:
                 FlagsSet:
                 ReachableReqs:
